HelloUltraviolet/Fixtures/RejectedSource/Patterns/IfCaseEnumNonExhaustive/Expected.uv
//! Expected diagnostic metadata for the IfCaseEnumNonExhaustive rejected-source specimen.

expectedDiagnostic("E-SEM-2741", "rule.17.IfCase-Enum-NonExhaustive")
